--- a/notebooks/how much fanfic do i read.ipynb
+++ b/notebooks/how much fanfic do i read.ipynb
@@ -46,11 +46,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-10-19T04:08:36.987761Z",
-     "start_time": "2020-10-19T04:08:36.984759Z"
+     "end_time": "2020-12-14T01:30:34.669680Z",
+     "start_time": "2020-12-14T01:30:34.660710Z"
     }
    },
    "outputs": [],
@@ -60,7 +60,7 @@
     "    soup = BeautifulSoup(resp.content)\n",
     "    loginform = soup.find('div', id='small_login')\n",
     "    form = {x['name'] : x['value'] for x in loginform.find_all('input', type='hidden')}\n",
-    "    form['user[password]'] = 'tomster10010'\n",
+    "    form['user[password]'] = 'x'\n",
     "    form['user[login]'] = 'McRibbedForHerPleasure'\n",
     "    form['commit'] = 'Log In'\n",
     "    resp = s.post('https://archiveofourown.org/users/login', data=form)\n",
@@ -335,7 +335,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.8.1"
   }
  },
  "nbformat": 4,
