what am I even doing

--- a/notebooks/Scraping basics.ipynb
+++ b/notebooks/Scraping basics.ipynb
@@ -264,11 +264,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 110,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-12-16T23:43:17.326296Z",
-     "start_time": "2020-12-16T23:43:17.315372Z"
+     "end_time": "2020-12-19T22:32:19.700493Z",
+     "start_time": "2020-12-19T22:32:19.672825Z"
     }
    },
    "outputs": [],
@@ -279,6 +279,8 @@
     "    resp = rd(s).get(bm_url)\n",
     "    if resp.status_code==429:\n",
     "        raise RateLimitException()\n",
+    "    elif resp.status_code == 404:\n",
+    "        return []\n",
     "    elif resp.status_code != 200:\n",
     "        raise Exception(f\"Bad status code: {resp.status_code}\")\n",
     "    soup = BeautifulSoup(resp.content)\n",
@@ -289,8 +291,7 @@
     "    if pages>1:\n",
     "        for i in range(2, pages+1):\n",
     "            ret += get_bookmarks_inner(user, bm_url, i, pages)\n",
-    "    if not ret:\n",
-    "        pdb.set_trace()\n",
+    "\n",
     "    return ret\n",
     "\n",
     "@retry(exceptions=RateLimitException, tries=3, delay=300, backoff=1, jitter=(0, 20))\n",
@@ -357,7 +358,7 @@
     {
      "data": {
       "text/plain": [
-       "  222: ebirdy1020"
+       " 1159: mytholora"
       ]
      },
      "metadata": {},
@@ -366,7 +367,7 @@
     {
      "data": {
       "text/plain": [
-       "  222: ebirdy1020"
+       " 1159: mytholora"
       ]
      },
      "metadata": {},
@@ -391,7 +392,7 @@
     {
      "data": {
       "text/plain": [
-       "PAGE 18/30"
+       "PAGE 27/27"
       ]
      },
      "metadata": {},
@@ -400,7 +401,7 @@
     {
      "data": {
       "text/plain": [
-       "PAGE 18/30"
+       "PAGE 27/27"
       ]
      },
      "metadata": {},
@@ -414,31 +415,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 111,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2020-12-16T23:44:15.607Z"
+     "end_time": "2020-12-20T02:40:24.927414Z",
+     "start_time": "2020-12-19T22:32:21.881107Z"
     }
    },
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d51e297079b54f5984c4d17ad4cb508c",
+       "model_id": "8d5c43246bff4429951fb42f7fc3a6d3",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "HBox(children=(HTML(value='users'), FloatProgress(value=0.0, max=1160.0), HTML(value='')))"
+       "HBox(children=(HTML(value='users'), FloatProgress(value=0.0, max=325.0), HTML(value='')))"
       ]
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
     }
    ],
    "source": [
     "exclude = {x[0] for x in bookmarks_output}\n",
-    "for i in tqdm(range(0, len(user_list)), desc='users'):\n",
+    "for i in tqdm(range(835, len(user_list)), desc='users'):\n",
     "    user = user_list[i]\n",
     "    if user in exclude:\n",
     "        continue\n",
@@ -520,11 +529,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 112,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-12-16T21:12:07.724330Z",
-     "start_time": "2020-12-16T21:11:58.891340Z"
+     "end_time": "2020-12-20T06:04:38.763333Z",
+     "start_time": "2020-12-20T06:04:38.760343Z"
     }
    },
    "outputs": [],
@@ -534,11 +543,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 113,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-12-16T21:14:24.542114Z",
-     "start_time": "2020-12-16T21:14:24.292567Z"
+     "end_time": "2020-12-20T06:04:39.944208Z",
+     "start_time": "2020-12-20T06:04:39.839647Z"
     }
    },
    "outputs": [],
@@ -548,16 +557,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 114,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-12-16T23:39:28.817261Z",
-     "start_time": "2020-12-16T23:39:28.327904Z"
+     "end_time": "2020-12-20T06:04:43.470838Z",
+     "start_time": "2020-12-20T06:04:43.096714Z"
     }
    },
    "outputs": [],
    "source": [
-    "df.to_csv('data1.csv', index=False, header=False)"
+    "df.to_csv('data2.csv', index=False, header=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 115,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-12-20T06:04:49.156235Z",
+     "start_time": "2020-12-20T06:04:49.151229Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "295236"
+      ]
+     },
+     "execution_count": 115,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(df)"
    ]
   },
   {
@@ -984,6 +1018,18 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.1"
   }
  },
  "nbformat": 4,
