finalized sqlite database prototyping

--- a/notebooks/Scraping basics.ipynb
+++ b/notebooks/Scraping basics.ipynb
@@ -5,8 +5,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-12-15T06:12:12.327119Z",
-     "start_time": "2020-12-15T06:12:12.174198Z"
+     "end_time": "2021-04-04T20:01:25.464912Z",
+     "start_time": "2021-04-04T20:01:25.008920Z"
     }
    },
    "outputs": [],
@@ -19,6 +19,7 @@
     "from retry import retry\n",
     "import time\n",
     "import pdb\n",
+    "from ratelimiter import RateLimiter\n",
     "from tqdm.notebook import tqdm as tqdm"
    ]
   },
@@ -39,11 +40,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-12-15T06:12:12.340008Z",
-     "start_time": "2020-12-15T06:12:12.335024Z"
+     "end_time": "2021-04-04T20:02:53.400848Z",
+     "start_time": "2021-04-04T20:02:53.382772Z"
     }
    },
    "outputs": [],
@@ -51,26 +52,35 @@
     "base_url = 'https://archiveofourown.org/'\n",
     "base_fandom = 'https://archiveofourown.org/tags/{fandom}/works'\n",
     "shera = 'She-Ra%20and%20the%20Princesses%20of%20Power%20(2018)'\n",
-    "base_qs = {'commit': ['Sort and Filter'],\n",
-    " 'page': ['1'],\n",
-    " 'utf8': ['✓'],\n",
-    " 'work_search[sort_column]': ['bookmarks_count']}"
+    "base_qs = {'utf8': ['✓'],\n",
+    " 'commit': ['Sort and Filter'],\n",
+    " 'work_search[sort_column]': ['created_at'],\n",
+    " 'work_search[query]': ['sort:>posted'],\n",
+    " 'page': ['1']}\n",
+    "pages = 591"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 12,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-04-04T20:13:19.173665Z",
+     "start_time": "2021-04-04T20:13:19.157397Z"
+    }
+   },
    "outputs": [],
-   "source": []
+   "source": [
+    "ratelimiter = RateLimiter(max_calls=10, period=35)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-12-16T23:11:53.650136Z",
-     "start_time": "2020-12-16T23:11:53.636255Z"
+     "end_time": "2021-04-04T20:03:06.771610Z",
+     "start_time": "2021-04-04T20:03:06.753670Z"
     }
    },
    "outputs": [],
@@ -96,8 +106,8 @@
    "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-12-15T06:12:22.321252Z",
-     "start_time": "2020-12-15T06:12:14.761148Z"
+     "end_time": "2021-04-04T20:05:51.762573Z",
+     "start_time": "2021-04-04T20:05:45.951545Z"
     }
    },
    "outputs": [
@@ -113,72 +123,42 @@
     }
    ],
    "source": [
-    "s = requests.session()\n",
-    "\n",
-    "login(rd(s))"
+    "s = requests.session()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-12-16T23:16:29.278208Z",
-     "start_time": "2020-12-16T23:16:29.272143Z"
+     "end_time": "2021-04-04T20:07:51.125046Z",
+     "start_time": "2021-04-04T20:07:51.074244Z"
     }
    },
    "outputs": [],
    "source": [
-    "user_list = []\n",
-    "page=1"
+    "mkdir data\\pages"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-12-15T05:29:11.208670Z",
-     "start_time": "2020-12-15T05:29:11.203627Z"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1\n",
-      "5\n",
-      "9\n",
-      "13\n",
-      "17\n"
-     ]
-    }
-   ],
-   "source": [
-    "for i in range(1,20,4):\n",
-    "    print(i)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 89,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-12-16T23:19:46.655861Z",
-     "start_time": "2020-12-16T23:17:02.240035Z"
+     "end_time": "2021-04-04T22:05:48.042292Z",
+     "start_time": "2021-04-04T22:05:45.397616Z"
     }
    },
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a86fd596fbbb46e0b71ca5197c9f807f",
+       "model_id": "ba5282ad51e44a16bd3010ac0295dfef",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "HBox(children=(HTML(value=''), FloatProgress(value=0.0, max=58.0), HTML(value='')))"
+       "HBox(children=(HTML(value=''), FloatProgress(value=0.0, max=1.0), HTML(value='')))"
       ]
      },
      "metadata": {},
@@ -193,14 +173,16 @@
     }
    ],
    "source": [
-    "for page in tqdm(range(2, 234, 4)):\n",
-    "#     if (i-1)%4 == 0:\n",
-    "#         continue\n",
-    "    resp = rd(s).get(f'https://archiveofourown.org/works/24280306/bookmarks?page={page}')\n",
-    "    soup = BeautifulSoup(resp.content)\n",
-    "    user_list += [x.a['href'].split('/')[2] for x in soup.find_all('li', class_='user short blurb group')]\n",
-    "    \n",
-    "    "
+    "for page in tqdm(range(1, pages+1)):\n",
+    "    base_qs['page'] = [str(page)]\n",
+    "    with ratelimiter:\n",
+    "        resp = rd(s).get(base_fandom.format(fandom=shera), params=base_qs)\n",
+    "    if resp.status_code != 200:\n",
+    "        print(f'Bad status code: {resp.status_code} at page {page}')\n",
+    "        print(resp.content)\n",
+    "        break\n",
+    "    with open(f'./data/pages/shera-{page}.html', 'wb') as fout:\n",
+    "        fout.write(resp.content)"
    ]
   },
   {
@@ -254,6 +236,7 @@
     "            continue\n",
     "        bookmark_fics.append(x.h4.a['href'].split('/')[2])\n",
     "    return bookmark_fics\n",
+    "\n",
     "def get_max_pages(soup):\n",
     "    pages =soup.find('ol', role='navigation')\n",
     "    if pages:\n",
